# SpooderMan

./: .gitignore
dev_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
dev_ws/log/: latest_build
dev_ws/src/image_classifier/: classifier.py  data_loader.py  features.py  main.py  utils.py
dev_ws/src/image_classifier/evan/: main.py
dev_ws/src/image_classifier/image_classifier_v2/: main.py  main_old.py  sort_data.py
dev_ws/src/image_classifier/image_classifier_v3/: main.py  svm_model.pkl  svm_model_all_data_preprocessed_with_maze.pkl  svm_model_all_data_square_cropped.pkl  (+1 more)
dev_ws/src/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
dev_ws/src/log/: latest_build
dev_ws/src/maps/: map.pgm  map.yaml  map_from_gazebo.pgm  map_from_gazebo.yaml  maze_final.pgm  maze_final.yaml
dev_ws/src/py_pubsub/: package.xml  setup.py
dev_ws/src/spooderman_chase_object/: package.xml  setup.cfg  setup.py
dev_ws/src/spooderman_chase_object/launch/: spooderman_chase_object_launch.py
dev_ws/src/spooderman_chase_object/spooderman_chase_object/: chase_object.py  detect_object.py  get_object_range.py
dev_ws/src/spooderman_nav2goal/: package.xml  setup.cfg  setup.py
dev_ws/src/spooderman_navigate_maze/: package.xml  setup.cfg  setup.py
dev_ws/src/spooderman_navigate_to_goal/: package.xml  setup.cfg  setup.py
dev_ws/src/spooderman_object_follower/: setup.cfg  setup.py
miles_morales_turtlebot3_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
miles_morales_turtlebot3_ws/log/: latest_build
(+351 files in other folders)
