<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spooderman_chase_object</name>
  <version>0.0.0</version>
  <description>Object chaser turtlebot3</description>
  <maintainer email="cherry.lian@gatech.edu">Cherry Lian</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>sensor_msgs</test_depend>
  <test_depend>sys</test_depend>
  <test_depend>numpy</test_depend>
  <test_depend>cv2</test_depend>
  <test_depend>cv_bridge</test_depend>
  <test_depend>std_msgs</test_depend>
  <test_depend>os</test_depend>
  <test_depend>glob</test_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>math</exec_depend>
  <exec_depend>numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
